recipe-image-final-error.txt
  File "/tmp/apply_recipe_image_patch.py", line 160
    r'(?P<indent>[ 	]+)onRecipeClick = onRecipeClick,
    ^
SyntaxError: unterminated string literal (detected at line 160)
Traceback (most recent call last):
  File "/home/runner/work/phils-osophy/phils-osophy/scripts/execute_recipe_image_patch.py", line 80, in <module>
    subprocess.run(["python", str(patch_script)], check=True)
  File "/usr/lib/python3.12/subprocess.py", line 571, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['python', '/tmp/apply_recipe_image_patch.py']' returned non-zero exit status 1.
